@@ -13,3 +13,8 @@ class Journal:
 
     bank_deposit_ticket_statement = fields.Boolean(
         'Bank Deposit Ticket Statement')
+
+    @classmethod
+    def __setup__(cls):
+        super(Journal, cls).__setup__()
+        cls.validation.selection.append(('manual', 'Manual'))
