@@ -1,2 +1,4 @@
+* Add manual validation on statement
+
 Version 1.2 - 2014-07-01
 * Changelog file creation
